<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                      http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <name>Otto Systemtest</name>
    <description>A system test suite for Otto online shop.</description>
    <url>https://www.otto.de</url>

    <groupId>de.otto.systemtest</groupId>
    <artifactId>otto</artifactId>
    <version>1.0</version>

    <properties>
        <!-- Generic properties -->
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <resource.directory>src/test/resources</resource.directory>

        <!-- Test -->
        <junit.version>4.12</junit.version>

        <!-- Selenium -->
        <selenium.version>3.0.1</selenium.version>
        <selenium.remote.version>3.0.1</selenium.remote.version>

        <!-- PhantomJS -->
        <phantomjsdriver.version>1.3.0</phantomjsdriver.version>

        <!-- Logging -->
        <jcl.slf4j.version>1.7.21</jcl.slf4j.version>
        <logback.version>1.1.7</logback.version>

        <!-- Unirest -->
        <unirest.version>1.4.9</unirest.version>

        <!-- Jaxb impl -->
        <jaxb.impl.version>2.2.11</jaxb.impl.version>

        <!-- Jaxb runtime -->
        <jaxb.runtime.version>2.2.10-b140310.1920</jaxb.runtime.version>

        <!-- Maven compiler -->
        <maven.compiler.version>3.5.1</maven.compiler.version>

        <!-- Webdriver downloader -->
        <webdriver.downloader.version>1.0.9</webdriver.downloader.version>
        <overwrite.binaries>true</overwrite.binaries>

        <!-- Failsafe -->
        <maven.failsafe.version>2.19.1</maven.failsafe.version>
        <browser>chrome</browser>
        <threads>1</threads>
        <remote>false</remote>
        <seleniumGridURL/>
        <platform/>
        <browserVersion/>
        <proxyEnabled>false</proxyEnabled>
        <proxyHost/>
        <proxyPort/>
    </properties>

    <dependencies>
        <!-- Test -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium.version}</version>
        </dependency>

        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-remote-driver</artifactId>
            <version>${selenium.remote.version}</version>
        </dependency>

        <!-- PhantomJS -->
        <dependency>
            <groupId>com.codeborne</groupId>
            <artifactId>phantomjsdriver</artifactId>
            <version>${phantomjsdriver.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- Logging -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
            <version>${jcl.slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>

        <!-- Unirest -->
        <dependency>
            <groupId>com.mashape.unirest</groupId>
            <artifactId>unirest-java</artifactId>
            <version>${unirest.version}</version>
        </dependency>

        <!-- Jaxb impl -->
        <dependency>
            <groupId>com.sun.xml.bind</groupId>
            <artifactId>jaxb-impl</artifactId>
            <version>${jaxb.impl.version}</version>
        </dependency>

        <!-- Jaxb runtime -->
        <dependency>
            <groupId>org.glassfish.jaxb</groupId>
            <artifactId>jaxb-runtime</artifactId>
            <version>${jaxb.runtime.version}</version>
        </dependency>

        <!-- Java Money -->
        <dependency>
            <groupId>org.javamoney</groupId>
            <artifactId>moneta</artifactId>
            <version>1.0</version>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>selenium-tests</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <!-- Maven compiler plugin -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>${maven.compiler.version}</version>
                        <configuration>
                            <source>1.8</source>
                            <target>1.8</target>
                        </configuration>
                    </plugin>
                    <!-- Webdriver binary downloader -->
                    <plugin>
                        <groupId>com.lazerycode.selenium</groupId>
                        <artifactId>driver-binary-downloader-maven-plugin</artifactId>
                        <version>${webdriver.downloader.version}</version>
                        <configuration>
                            <rootStandaloneServerDirectory>${project.basedir}/src/test/resources/selenium_standalone_binaries</rootStandaloneServerDirectory>
                            <downloadedZipFileDirectory>${project.basedir}/src/test/resources/selenium_standalone_zips</downloadedZipFileDirectory>
                            <customRepositoryMap>${project.basedir}/src/test/resources/RepositoryMap.xml</customRepositoryMap>
                            <overwriteFilesThatExist>${overwrite.binaries}</overwriteFilesThatExist>
                        </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>selenium</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <!-- Failsafe -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-failsafe-plugin</artifactId>
                        <version>${maven.failsafe.version}</version>
                        <configuration>
                            <systemPropertyVariables>
                                <browser>${browser}</browser>
                                <screenshotDirectory>${project.build.directory}/screenshots</screenshotDirectory>
                                <remoteDriver>${remote}</remoteDriver>
                                <gridURL>${seleniumGridURL}</gridURL>
                                <desiredPlatform>${platform}</desiredPlatform>
                                <desiredBrowserVersion>${browserVersion}</desiredBrowserVersion>
                                <proxyEnabled>${proxyEnabled}</proxyEnabled>
                                <proxyHost>${proxyHost}</proxyHost>
                                <proxyPort>${proxyPort}</proxyPort>
                                <!-- Set properties passed in by the driver binary downloader. Please do not try to fix the
                                 'cannot resolve symbol' error. LEAVE IT RED! -->
                                <phantomjs.binary.path>${phantomjs.binary.path}</phantomjs.binary.path>
                                <webdriver.chrome.driver>${webdriver.chrome.driver}</webdriver.chrome.driver>
                                <webdriver.ie.driver>${webdriver.ie.driver}</webdriver.ie.driver>
                                <webdriver.opera.driver>${webdriver.opera.driver}</webdriver.opera.driver>
                                <webdriver.gecko.driver>${webdriver.gecko.driver}</webdriver.gecko.driver>
                            </systemPropertyVariables>
                            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                        </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>integration-test</goal>
                                    <!-- This goal makes the build fail if you have test failures -->
                                    <goal>verify</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>